<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		tools:showIn="@layout/app_bar_main"
		tools:context=".MainActivity">
	
	<TextView
			android:id="@+id/useless"
			android:text="@string/connected_device"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			app:layout_constraintTop_toTopOf="parent"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/address"
			android:textColor="@color/md_red_400"
			app:layout_constraintStart_toEndOf="@+id/useless"
			app:layout_constraintTop_toTopOf="@+id/useless"
			app:layout_constraintBottom_toBottomOf="@+id/useless"/>
	<Button
			android:text="@string/disconnect"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/disconnect"
			app:layout_constraintTop_toTopOf="@+id/useless"
			app:layout_constraintBottom_toBottomOf="@+id/useless"
			app:layout_constraintEnd_toStartOf="@+id/sensor_swicth"
			android:layout_marginEnd="16dp"/>
	<Switch
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/sensor_swicth"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp"
			app:layout_constraintTop_toTopOf="@+id/disconnect"
			app:layout_constraintBottom_toBottomOf="@+id/disconnect"/>
	
	<com.github.mikephil.charting.charts.LineChart
			android:id="@+id/chart"
			android:layout_width="match_parent"
			android:layout_height="230dp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp"/>
	
	<TextView
			android:text="@string/acc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="@+id/txv1"
			app:layout_constraintBottom_toTopOf="@+id/txv1"/>
	<TextView
			android:text="@string/mag"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="@+id/txv2"
			app:layout_constraintBottom_toTopOf="@+id/txv2"/>
	<TextView
			android:text="@string/gyr"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="@+id/txv3"
			app:layout_constraintBottom_toTopOf="@+id/txv3"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/txv1"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintEnd_toStartOf="@+id/txv2" app:layout_constraintBottom_toBottomOf="parent"
			android:text="@string/txv_default" android:layout_marginBottom="16dp"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/txv2"
			app:layout_constraintStart_toEndOf="@+id/txv1"
			app:layout_constraintEnd_toStartOf="@+id/txv3"
			app:layout_constraintTop_toTopOf="@+id/txv1" app:layout_constraintBottom_toBottomOf="@+id/txv1"
			android:text="@string/txv_default"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/txv3"
			app:layout_constraintStart_toEndOf="@+id/txv2"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@+id/txv2" app:layout_constraintBottom_toBottomOf="@+id/txv2"
			android:text="@string/txv_default"/>

</android.support.constraint.ConstraintLayout>